force-app/main/default/objects/ClusterAttribute__b/ClusterAttribute__b.object-meta.xml
<CustomObject>
    <label>ClusterAttribute</label>
    <pluralLabel>ClusterAttributes</pluralLabel>
</CustomObject>