force-app/main/default/objects/ClusterAttribute__b/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>ClusterAttributes</relationshipLabel>
    <relationshipName>ClusterAttributes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>