force-app/main/default/objects/ClusterAttribute__b/fields/Modification_time__c.field-meta.xml
<CustomField>
    <fullName>Modification_time__c</fullName>
    <label>Modification time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>